<resources>
    <string name="app_name">WA Delete</string>
    <string name="home">Home</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_">Continue</string>

    <string name="premium">Premium</string>
    <string name="upgrade_to_premium">Upgrade to premium</string>
    <string name="family_apps">Family apps</string>
    <string name="photo_editor">Art Sketch Photo Editor</string>
    <string name="communicate">Communicate</string>
    <string name="how_to_use">How to use</string>
    <string name="share">Share</string>
    <string name="rate_it">Rate it</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="help">Help</string>

    <string name="enable_permission">ENABLE PERMISSION</string>
    <string name="we_need_your_permission">We need your permission</string>
    <string name="we_need_your_permission_desc">In order to store your WhatsApp deleted messages locally, you need to allow \"Notification Access\" permission to this app. Select <b>WA Delete</b> application in next seen to enable the permission</string>
    <string name="no_deleted_chat_detected_yet">No deleted chat detected yet</string>
    <string name="select_all">Select All</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear All</string>
    <string name="delet_all">Delete All</string>
    <string name="no_document_detected_yet">No Document detected yet</string>
    <string name="no_image_detected_yet">No Image detected yet</string>
    <string name="no_video_detected_yet">No Video detected yet</string>
    <string name="no_voice_detected_yet">No Voice notes detected yet</string>
    <string name="no_audio_detected_yet">No Audio detected yet</string>

    <!-- <string name="admob_app_id">ca-app-pub-3940256099942544~334751171</string>
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/630097811</string>
     <string name="interstitial_id">ca-app-pub-3940256099942544/103317371</string>
     <string name="native_advanced">ca-app-pub-3940256099942544/224769611</string>-->

    <!--    test ids-->
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="native_advanced">	ca-app-pub-3940256099942544/2247696110</string>


    <string name="license_key">YOUR LICENSE KEY FROM GOOGLE PLAY CONSOLE HERE</string>
    <string name="one_time_id">android.test.purchased</string>
    <string name="one_year_id">android.test.purchased</string>
    <string name="six_month_id">android.test.purchased</string>
    <string name="try_our_other_apps">Try Our Other Apps</string>
    <string name="chat">Chat</string>
    <string name="document">Document</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="voice_notes">Voice Notes</string>
    <string name="audio">Audio</string>
    <string name="recover_deleted_messages_video_photo_for_whatsapp">Recover deleted messages, Video-Photo for whatsapp</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="by_clicking_accept_you">By clicking accept, you accept our advertising policy and do not violate the terms of use of other applications</string>
    <string name="next">Next</string>

    <array name="startup_titles">
        <item>Attention</item>
        <item>We care about our privacy and data security</item>
        <item></item>
    </array>
    <array name="startup_descriptions">
        <item>By using this application you may violate the terms of services of other applications.
            Remember to review these terms of use of other applications before selecting them and DO
            NOT select incompatible applications.
        </item>
        <item>This applications is free and to continue working on it we have to show advertising.
            To do this, our ad provides will use the information they have gathered about you.
            Remember, read the policies and you need to be of legal age to continue. Our ads
            providers may vary, privacy policies will always appear up-to-date.\n\n WA Delete does
            not use your notifications for commercial purpose, only to save and detect its content
            on your device
        </item>
        <item>
            By clicking accept, you accept our advertising policies and do not violate the terms of
            use of other applications
        </item>
    </array>
    <string name="how_it_work_desc">
      <![CDATA[  1) Open the \'WhatsApp Messenger\'<br><br>
        <b><font color=\'#cc0029\'> 2) Imp*: Turn on auto download media setting from \'WhatsApp Messenger\' for better WA Delete Working.</font></b><br><br>
        3) Save WhatsApp media files(Image, Videos, Voice Notes, Audios, Documents).<br><br>
        4) Now open the \'WA Delete\' to check the downloaded files here.<br><br>
        5) you will be notified if any message is deleted from sender side.<br><br>
        6) Turn ON/OFF duplications in order to save storage.<br><br>
        7) Check or uncheck Tabs from settings to sve that deleted media file.<br><br>
        8) Your WhatsApp notification must be turned on for getting deleted text messages.
    ]]></string>
    <string name="accept">Accept</string>
    <string name="media_file_backup_list">Media file backup list</string>
    <string name="erase_all_messages">Erase All Messages</string>
    <string name="today">Today</string>
    <string name="search">Search</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="sign_in_to_syn">Sign in to sync your data</string>
    <string name="phone_num_req">WhatsApp Delete will send an SMS message to verify your phone number. Enter your countryModel code and phone number</string>
    <string name="not_now">Not Now</string>
    <string name="sign_in_register">Sign in/Register</string>
    <string name="upgrade_to_enjoy_premium">Upgrade to enjoy premium</string>
    <string name="last_backup">Last Backup</string>
    <string name="backup_up_desc">Back up your messages and media. You can restore them when you reinstall WA Delete.</string>
    <string name="back_up_to_google_drive">Back up</string>
    <string name="daily">Daily</string>
    <string name="back_up_over">Back up over</string>
    <string name="wi_fi_only">Wi-Fi only</string>
    <string name="back_up">Back up</string>
    <string name="include_videos">Include videos</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="we_won_t_share_your_personal_details_with_anyone">We won\'t share your personal details with anyone</string>
    <string name="last_time_no_backup">Last Time : No Backup</string>
    <string name="please_choose_you_gender">Please choose you gender</string>
    <string name="to_create_an_experience_just_for_you">to create an experience just for you</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tell_us_your_birthday">Tell us your Birthday</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="wa_delete_is_verifying_your_phone_number">WA Delete is verifying your phone number</string>
    <string name="verification_code">Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="to_make_account_more_personal">to make account more personal</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="personal_information">Personal Information</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="done">Done</string>
    <string name="back">back</string>
    <string name="restore_files">Restore Files</string>
</resources>
