<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/wa_delete_is_verifying_your_phone_number"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_verification_code"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/codeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/verification_code"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"

        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:id="@+id/textRem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingRight="12dp"
        android:textColor="@color/black"
        android:textSize="10sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/home_btn_bg"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/confirmBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/home_btn_bg"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>