<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="beetech.wapp.delete.auth.VerificationViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_in_to_syn"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/phone_num_req" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                app:ccp_defaultLanguage="ENGLISH"
                app:ccp_defaultPhoneCode="92" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/numberInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:layout_weight="3">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="17"
                    android:maxLines="1"
                    android:text="@={viewModel.mobileNumber}"
                    app:backgroundTint="@color/colorPrimary"
                    tools:ignore="LabelFor">

                    <requestFocus />
                </androidx.appcompat.widget.AppCompatEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/we_won_t_share_your_personal_details_with_anyone"/>

        <TextView
            android:id="@+id/tv_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColorLink="@color/colorPrimary" />


        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/custom_start_btn"
            android:onClick="@{()->viewModel.verifyMobileNumber()}"
            android:text="@string/next"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_not_now"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="@{()->viewModel.notNowClick()}"
            android:text="@string/not_now"
            android:textColor="@color/grey" />

    </LinearLayout>
</layout>