<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenderActivity">

    <ImageView
        android:id="@+id/iv_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="?attr/homeAsUpIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tell_us_your_birthday"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_back_arrow" />

    <TextView
        android:id="@+id/tv_choose_gender_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/to_create_an_experience_just_for_you"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dob" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/male"
        app:civ_border_color="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/tv_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_choose_gender_desc"
        app:layout_constraintVertical_chainStyle="packed" />


    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/male"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_month"
        app:layout_constraintEnd_toEndOf="@+id/iv_profile"
        app:layout_constraintStart_toStartOf="@+id/iv_profile"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

    <TextView
        android:id="@+id/tv_month"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_profile_bg"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/month"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gender"
        app:layout_goneMarginTop="30dp" />


    <TextView
        android:id="@+id/tv_day"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_profile_bg"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/day"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_month" />

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_profile_bg"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/year"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_dob_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_day" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_dob_next"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/next" />

</androidx.constraintlayout.widget.ConstraintLayout>