<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenderActivity">

    <ImageView
        android:id="@+id/iv_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="?attr/homeAsUpIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tell_us_about_yourself"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_back_arrow" />

    <TextView
        android:id="@+id/tv_choose_gender_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/to_make_account_more_personal"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dob" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/ic_user"
        app:civ_border_color="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/tv_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_choose_gender_desc"
        app:layout_constraintVertical_chainStyle="packed" />


    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/male"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/et_name"
        app:layout_constraintEnd_toEndOf="@+id/iv_profile"
        app:layout_constraintStart_toStartOf="@+id/iv_profile"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_profile_bg"
        android:gravity="center"
        android:hint="@string/name"
        android:padding="12dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gender"
        app:layout_goneMarginTop="30dp" />


    <EditText
        android:id="@+id/et_mail"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_profile_bg"
        android:gravity="center"
        android:hint="@string/prompt_email"
        android:padding="12dp"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_profile_bg"
        android:enabled="false"
        android:gravity="center"
        android:hint="@string/phone_number"
        android:padding="12dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_profile_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_profile_next"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/done"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/done" />

</androidx.constraintlayout.widget.ConstraintLayout>